[ MAIN DESIGN | HOME DESIGN | DEPENDENCY INJECTION SETUP | ROOM DATA BASE MODELS | ROOM DATA BASE DAOS | USE APP ARCHETICHTURE ]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Note</string>
+    <string name="app_name">Note App</string>
+    <string name="last_edit_time">last edit Time : </string>
+    <string name="add_new">new</string>
 </resources>
